--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2762,20 +2762,18 @@ input, select, textarea {
 			color: #544d55;
 		}
 
-
 		#header .logo {
-			/* background: #4eb980; */
-			/* border-radius: 100%; */
-			/* color: #ffffff; */
+			background: #4eb980;
+			border-radius: 100%;
+			color: #ffffff;
 			cursor: default;
 			display: inline-block;
-			/* font-size: 2.25em; */
-			/* height: 2.35em; */
-			/* line-height: 2.35em; */
-			/* margin: 0 0 0.75em 0; */
+			font-size: 2.25em;
+			height: 2.35em;
+			line-height: 2.35em;
+			margin: 0 0 0.75em 0;
 			text-align: center;
-			/* width: 2.35em; */
-			width: 400px;
+			width: 2.35em;
 		}
 
 			#header .logo.fa-paper-plane-o:before {
@@ -2783,9 +2781,12 @@ input, select, textarea {
 				position: relative;
 			}
 
+			h1.banner {
+				margin:0 10px 0 10px;
+			}
 		#header h1 {
-			font-size: 2.5em;
-			margin: 0;
+			font-size: 4.5em;
+			margin: -30px 0 -30px 0;
 		}
 
 		#header p {
@@ -2959,12 +2960,20 @@ input, select, textarea {
 			}
 
 				#header h1 {
-					font-size: 2.25em;
+					font-size: 4.25em;
+					font-family: Arial, Helvetica, sans-serif;
+					font-weight: lighter;
 				}
 
 				#header p {
 					font-size: 1.25em;
 					line-height: 1.65em;
+				}
+
+				.integration {
+					text-transform: uppercase;
+					letter-spacing: 10px;
+					padding-bottom:1em;
 				}
 
 	}
@@ -3038,7 +3047,7 @@ input, select, textarea {
 				}
 
 				#header h1 {
-					font-size: 2em;
+					font-size: 3.5em;
 				}
 
 				#header p {
@@ -3194,7 +3203,7 @@ input, select, textarea {
 				}
 
 				#header h1 {
-					font-size: 1.25em;
+					font-size: 3.25em;
 				}
 
 				#header p {
